package com.divinelink.core.ui

object TestTags {

  const val TOP_LEVEL_DESTINATION = "Top Level Destination %s"

  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }

    object Button {
      const val CLEAR_FILTERS = "Clear language button"
      const val SWITCH_VIEW = "Switch View Button"
    }

    object SearchBar {
      const val CLICKABLE_SEARCH_BAR = "Clickable Search Bar"
      const val SEARCH_BAR = "Search Bar focus status %s"
      const val LOADING_INDICATOR = "Search Bar Loading Indicator"
      const val CLOSE_SEARCH = "Search Bar Close Button"
    }

    object TopAppBar {
      const val NAVIGATE_UP = "Top App Bar Navigate Up Button"
      const val TOP_APP_BAR = "Top App Bar"
      const val TOP_APP_BAR_TITLE = "Top App Bar Title"
    }

    object ExpandableFab {
      const val BACKGROUND = "Floating Button Background"
      const val BUTTON = "Expandable Floating Action Button"
    }

    const val FILTER_BUTTON = "Filter Button"

    const val NAVIGATION_BAR = "App Navigation Bar"

    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

  const val VIEW_ALL = "View All Button"

  object Rating {
    const val IMDB_RATING = "IMDb Rating"
    const val IMDB_RATING_SKELETON = "IMDb Rating Skeleton"
    const val TRAKT_RATING = "Trakt Rating"
    const val TRAKT_RATING_SKELETON = "Trakt Rating Skeleton"
    const val TMDB_RATING = "TMDb Rating"
    const val RT_RATING = "Rotten Tomatoes Rating"
    const val RT_RATING_SKELETON = "Rotten Tomatoes Skeleton"
    const val METACRITIC_RATING = "Metascore Rating"
    const val METACRITIC_RATING_SKELETON = "Metascore Skeleton"

    const val DETAILS_RATING_BUTTON = "User Score Button"
    const val VOTE_COUNT = "Rating Vote Count %s"
    const val ALL_RATINGS_BOTTOM_SHEET = "All Ratings Bottom Sheet"

    const val RATING_SOURCE_SKELETON = "Rating skeleton for %s"
  }

  object Profile {
    const val CONTENT = "Profile Content"
  }

  object Details {
    const val COLLAPSIBLE_LAYOUT = "Details Collapsible Layout"

    const val RATE_THIS_BUTTON = "Rate This Button"
    const val YOUR_RATING = "Details Your Rating %s"
    const val RATE_DIALOG = "Details Rate Dialog"
    const val RATE_SLIDER = "Details Rate Slider"

    const val WATCH_TRAILER = "Details Watch Trailer Button"

    object About {
      const val FORM = "Details About Form"
    }

    object Recommendations {
      const val EMPTY = "Details Recommendations Empty"
      const val FORM = "Details Recommendations Form"
    }

    object Cast {
      const val FORM = "Details Cast Form"
      const val EMPTY = "Details Cast Empty"
    }

    object Reviews {
      const val FORM = "Details Reviews Form"
      const val REVIEW_CARD = "Details Reviews Card - %s"
      const val EMPTY = "Details Reviews Empty"
    }

    object Seasons {
      const val FORM = "Details Seasons Form"
      const val EMPTY = "Details Seasons Empty"
    }
  }

  object Tabs {
    const val TAB_ITEM = "Tab Item %s"
  }

  object Person {
    const val PERSONAL_DETAILS = "Person Personal Details"
    const val CONTENT_LIST = "Person Details Lazy List"
    const val DEPARTMENT_STICKY_HEADER = "Person Department Sticky - %s"

    const val PERSON_NAME = "Person Name on Collapsible Content"
    const val COLLAPSIBLE_CONTENT = "Person Collapsible Content"

    const val SHIMMERING_BIOGRAPHY_CONTENT = "Shimmering Biography Content"

    const val CREDITS_FILTER_BOTTOM_SHEET = "Person Credits Filter Bottom Sheet"

    const val KNOWN_FOR_SECTION = "Person Known For Section"
    const val KNOWN_FOR_SECTION_LIST = "Person Known For Section Lazy List"

    const val CREDIT_MEDIA_ITEM = "Person Credit Media Item - %s"

    const val EMPTY_CONTENT_CREDIT_CARD = "Person Empty Content Credit Card - %s"

    const val ABOUT_FORM = "Person About Form"
    const val MOVIES_FORM = "Person Movies Form style grid = %s"
    const val TV_SHOWS_FORM = "Person TV Shows Form style grid = %s"
  }

  object Dialogs {
    const val TWO_BUTTON_DIALOG = "Two Button Dialog"
    const val ALERT_DIALOG = "Dialogs Alert Dialog"
    const val CONFIRM_BUTTON = "Dialog Confirm Button"
    const val DISMISS_BUTTON = "Dialog Dismiss Button"
    const val SHARE_ERROR_BUTTON = "Share Error Button"
    const val DELETE_REQUEST = "Delete Request Dialog"
    const val REMOVE_ITEMS_FROM_LIST = "Remove Items From List"

    const val TOGGLE_ALL_SEASONS_SWITCH = "Season Toggle All Switch"
    const val SEASON_SWITCH = "Season Switch %s"
    const val SEASON_ROW = "Season Row %s"
  }

  object Modal {
    const val REQUEST_MOVIE = "Request Movie Modal"
    const val REQUEST_SEASONS = "Select Seasons Modal"
    const val ACTION_MENU = "Action Menu Modal"
    const val BOTTOM_SHEET = "Modal Bottom Sheet"

    const val DELETE_BUTTON = "Delete button for id %s"
  }

  object Request {
    const val LOADING_DROPDOWN_MENU = "Loading DropDown Menu %s"

    const val DESTINATION_SERVER_MENU = "Destination Server Dropdown %s"
    const val QUALITY_PROFILE_MENU = "Quality Profile Dropdown %s"
    const val ROOT_FOLDER_MENU = "Root Folder Dropdown %s"
  }

  object Settings {
    const val SCREEN_CONTENT = "Settings Screen Content"

    const val TOP_APP_BAR = "Settings Top App Bar"
    const val NAVIGATION_ICON = "Settings Navigation Icon"

    const val RADIO_BUTTON_SELECT_OPTION = "Settings Radio Button Select Option %s"

    object Account {
      const val LOGIN_BUTTON = "Account Login Button"
      const val LOGOUT_BUTTON = "Account Logout Button"
    }

    object About {
      const val CARD = "Application About Card"
      const val SCROLLABLE_CONTENT = "About Lazy List"
    }

    object Jellyseerr {
      const val INITIAL_CONTENT = "Jellyseerr Initial Content"
      const val LOGGED_IN_CONTENT = "Jellyseerr Logged In Content"
      const val ADDRESS_TEXT_FIELD = "Jellyseerr Address Text Field"

      const val LOGGED_IN_AVATAR = "Jellyseerr Logged In Avatar"

      const val USERNAME_TEXT_FIELD = "Username input"
      const val PASSWORD_TEXT_FIELD = "Password input"

      const val EMAIL_SUPPORT = "Email support field"
      const val JELLYSEERR_LOGIN_BUTTON = "Jellyseerr Login Button"
      const val JELLYSEERR_LOGOUT_BUTTON = "Jellyseerr Logout Button"
    }

    object LinkHandling {
      const val DIRECTIONS_TEXT = "Link Handling Directions"
    }
  }

  object Jellyseerr {
    object Requests {
      const val SCAFFOLD = "Jellyseerr Requests Scaffold"
    }
  }

  object Menu {
    fun item(value: String) = "Menu Item $value"
    const val MENU_BUTTON_VERTICAL = "Menu Button Vertical"
    const val DROPDOWN_MENU = "Dropdown Menu"
    const val SPOILERS_OBFUSCATION = "Spoilers Obfuscation Button"
  }

  object Watchlist {
    const val TAB_BAR = "Watchlist Tab Bar %s"
    const val WATCHLIST_SCREEN = "Watchlist Screen"
    const val WATCHLIST_ERROR_CONTENT = "Watchlist Error Content"
  }

  object Lists {
    const val SCROLLABLE_CONTENT = "Lists Scrollable Content View Mode %s"
    const val SCREEN = "Lists Screen"

    const val PULL_TO_REFRESH = "List Pull To Refresh"
    const val DETAILS_SCREEN = "List Details Screen"

    const val CREATE_LIST_FAB = "Create List FAB"

    object Details {
      const val EMPTY_ITEM = "List Details Empty Item"
      const val PULL_TO_REFRESH = "List Details Pull To Refresh"
      const val EDIT_LIST_FAB = "Edit List FAB"

      const val SELECTED_CARD = "Media with name %s is selected %s"
    }

    object Create {
      const val SCREEN = "Create List Screen"
    }

    object Add {
      const val SCREEN = "Add To List Screen"
    }
  }

  object Search {
    const val SEARCH_SCAFFOLD = "Search Scaffold"
  }

  object Credits {
    const val TAB_BAR = "Credits Tab Bar $%s"
    const val CAST_CREDITS_CONTENT = "Credits Content with cast"
    const val CREW_CREDITS_CONTENT = "Credits Content with crew"
  }

  object Onboarding {
    const val FULLSCREEN = "Fullscreen Onboarding Modal"
    const val MODAL = "Modal Onboarding"
  }

  object Auth {
    const val LOGIN_WEB_VIEW_SCREEN = "Login web view screen"
  }

  object Shimmer {
    const val HALF_LINE = "Shimmer Half Line - %s"
    const val LINE = "Shimmer Line - %s"
  }

  object ActionButton {
    const val REQUEST_MOVIE_BUTTON = "Request Movie Button"
  }
}
