<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="feature_details__watchlist">Watchlist</string>
  <string name="feature_details__add_to_list">Add to list</string>
  <string name="details__add_rating">Rate this</string>
  <string name="details__add_rating_description"><![CDATA[What do you think of <b>%s</b>?]]></string>
  <string name="details__clear_my_rating">Clear my rating</string>
  <string name="details__submit_rating_button">Submit rating</string>

  <string name="details__rating_submitted_successfully">Rating submitted for %s</string>
  <string name="details__rating_deleted_successfully">Rating cleared for %s</string>
  <string name="details__added_to_watchlist">Added %s to watchlist</string>
  <string name="details__removed_from_watchlist">Removed %s from watchlist</string>
  <string name="details__must_be_logged_in_to_rate">Please login to submit your rating.</string>
...
