...

  <string name="core_ui_retry">Retry</string>
  <string name="core_ui_login">Login</string>
  <string name="core_ui_logout">Logout</string>
  <string name="core_ui_error_retry">Something when wrong. Please try again.</string>
  <string name="core_ui_password">Password</string>
  <string name="core_ui_view_all">View all</string>

  <string name="core_ui_create_list">Create list</string>
  <string name="core_ui_create">Create</string>
  <string name="core_ui_edit">Save</string>

  <plurals name="core_ui_character_episode_episodes">
...
  <plurals name="core_ui_apply_filters">
    <item quantity="one">Apply 1 filter</item>
    <item quantity="other">Apply %s filters</item>
  </plurals>

  <!-- Accessibility -->
  <string name="core_ui_navigate_up_button_content_description">Navigate Up Button</string>
  <string name="core_ui_movie_image_placeholder">Movie image</string>
  <string name="core_ui_backdrop_image_placeholder">Backdrop image</string>
  <string name="core_ui_select_media_backdrop_image">Select media backdrop image</string>
  <string name="core_ui_avatar_image_placeholder">Avatar image</string>
  <string name="core_ui_mark_as_favorite_button_content_description">Mark As Favorite Button</string>
  <string name="clear_search_button_content_description">Clear Search Button</string>
...
